k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: giants-backend
  namespace: giants-sre
spec:
  replicas: 2
  selector:
    matchLabels:
      app: giants-backend
  template:
    metadata:
      labels:
        app: giants-backend
    spec:
      containers:
        - name: giants-backend
          image: 711427856586.dkr.ecr.ap-northeast-1.amazonaws.com/giants-sre-dashboard:latest
          ports:
            - containerPort: 8000
