k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giants-backend-service
  namespace: giants-sre
spec:
  type: ClusterIP
  selector:
    app: giants-backend
  ports:
    - port: 8000
      targetPort: 8000
